--- a/cart.html
+++ b/cart.html
@@ -43,10 +43,35 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h2 class="heading-2">your cart</h2>
-        <div class="products-page d-flex wrap gap" id="cart"></div>
+    <main class="main">
+        <h2 class="heading-2 d-flex justify-center">your cart</h2>
+        <main class="d-flex gap justify-center">
+        <div class=" d-flex direction-column wrap gap" id="cart"></div>
+        <div class="final-price d-flex direction-column gap shadow padding-all-16">
+            <div>Price Details</div>
+            <div class="d-flex align-center justify-space-between">
+                <span>Price <span class="total-items"></span> items</span>
+                <span class="product-price">Rs 500</span>
+            </div>
+            <div class="d-flex align-center justify-space-between">
+                <span>Discount</span>
+                <span class="total-discount">Rs 1500</span>
+            </div>
+            <div class="d-flex align-center justify-space-between">
+                <span>Delivery charge</span>
+                <span>Rs 100</span>
+            </div>
+            <div class="d-flex align-center justify-space-between">
+                <span>Total Amount</span>
+                <span class="total">Rs 3600</span>
+            </div>
+            <div> you save Rs <span class="savings"></span> on this order</div>
+            <button class="button btn-primary cursor">
+                place order
+            </button>
+        </div>
     </main>
+</main>
     <script type="module" src="./cart.js"></script>
 </body>
 </html>
