--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
              <a class="link" href="/">EcommerceApp</a>
          </h1>
      </div>
-     <div class="search-container relative">
+     <div class="d-flex grow-shrink-basis align-center">
+     <div class="search-container relative justify-center">
           <input class="serach-box" placeholder="search products">
-          <span class="material-icons-outlined nav-icon absolute right-0">
+          <span class="material-icons-outlined nav-icon link cursor list-item-inline" style="position: absolute;
+          right: 0px;
+          bottom: 10px;">
                search
           </span>
      </div>
+    </div>
      <nav class="navigation">
          <ul class="list-non-bullet d-flex align-center">
-             <!-- <li class="list-item-inline">
-                 <a href="/" class="link cursor">Home</a>
-             </li> -->
              <li class="list-item-inline">
-                 <a href="/" class="link cursor">
+                 <a href="/" class="link cursor d-flex align-end gap-sm">
                     <span class="material-icons-outlined nav-icon">
                          favorite_border
                     </span>
@@ -44,7 +45,31 @@
          </ul>
      </nav>
  </header>
- <div id="products" class="d-flex align wrap gap-prod products-page"></div>
+ <div class=" products-page d-flex">
+    <aside class="side-bar">
+        <h3 class="heading-3">filter</h3>
+        <div class="filter-container">
+            <h3 class="heading-3">Ratings</h3>
+            <div class="d-flex align-center gap">
+                <input data-rating="4" type="radio" name="rating" id="rating-4">
+                <label data-rating="4" class="label" for="rating-4">4 stars and above</label>
+            </div>
+            <div class="d-flex align-center gap">
+                <input data-rating="3" type="radio" name="rating" id="rating-3">
+                <label data-rating="3" class="label" for="rating-3">3 stars and above</label>
+            </div>
+            <div class="d-flex align-center gap">
+                <input data-rating="2" type="radio" name="rating" id="rating-2">
+                <label data-rating="2"  class="label" for="rating-2">2 stars and above</label>
+            </div>
+            <div class="d-flex align-center gap">
+                <input data-rating="1" type="radio" name="rating" id="rating-1">
+                <label data-rating="1" class="label" for="rating-1">1 stars and above</label>
+            </div>
+        </div>
+    </aside>
+<div id="products" class="product-container d-flex wrap gap"></div>
+ </div>
    <script type="module" src="./index.js"></script> 
 </body>
 </html>
