--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <nav class="navigation">
          <ul class="list-non-bullet d-flex align-center">
              <li class="list-item-inline">
-                 <a href="/" class="link cursor d-flex align-end gap-sm">
+                 <a href="./wishlist.html" class="link cursor d-flex align-end gap-sm">
                     <span class="material-icons-outlined nav-icon">
                          favorite_border
                     </span>
